crates/lang-parse/tests/snapshots/lexer__lexer_inner doc comment.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..16,
        value: InnerDocComment(
            "//! Doc comment1",
        ),
    },
    Spanned {
        span: 16..21,
        value: Whitespace(
            "\n    ",
        ),
    },
    Spanned {
        span: 21..37,
        value: InnerDocComment(
            "//! Doc comment2",
        ),
    },
    Spanned {
        span: 37..42,
        value: Whitespace(
            "\n    ",
        ),
    },
]
