crates/lang-parse/tests/snapshots/lexer__lexer_invalid expr string format.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: Identifier(
            "a",
        ),
    },
    Spanned {
        span: 1..2,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 2..3,
        value: OperatorAssignment,
    },
    Spanned {
        span: 3..4,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 4..21,
        value: Error(
            UnclosedStringFormat(
                4..21,
            ),
        ),
    },
    Spanned {
        span: 21..22,
        value: SigilSemiColon,
    },
    Spanned {
        span: 22..23,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 23..24,
        value: Identifier(
            "b",
        ),
    },
    Spanned {
        span: 24..25,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 25..26,
        value: OperatorAssignment,
    },
    Spanned {
        span: 26..27,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 27..28,
        value: LiteralInt(
            "1",
        ),
    },
]
