crates/lang-parse/tests/snapshots/lexer__lexer_leading dot.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..2,
        value: LiteralFloat(
            ".1",
        ),
    },
]
