crates/lang-parse/tests/snapshots/lexer__lexer_list range units.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: Identifier(
            "a",
        ),
    },
    Spanned {
        span: 1..2,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 2..3,
        value: OperatorAssignment,
    },
    Spanned {
        span: 3..4,
        value: Whitespace(
            " ",
        ),
    },
    Spanned {
        span: 4..5,
        value: SigilOpenSquareBracket,
    },
    Spanned {
        span: 5..6,
        value: LiteralInt(
            "1",
        ),
    },
    Spanned {
        span: 6..8,
        value: SigilDoubleDot,
    },
    Spanned {
        span: 8..9,
        value: LiteralInt(
            "3",
        ),
    },
    Spanned {
        span: 9..10,
        value: SigilCloseSquareBracket,
    },
    Spanned {
        span: 10..12,
        value: Identifier(
            "mm",
        ),
    },
    Spanned {
        span: 12..13,
        value: SigilSemiColon,
    },
]
