crates/lang-parse/tests/snapshots/lexer__lexer_multi-line string.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..18,
        value: LiteralString(
            "plain\n    string",
        ),
    },
]
