crates/lang-parse/tests/snapshots/lexer__lexer_multiple comment.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..11,
        value: SingleLineComment(
            "// comment1",
        ),
    },
    Spanned {
        span: 11..16,
        value: Whitespace(
            "\n    ",
        ),
    },
    Spanned {
        span: 16..27,
        value: SingleLineComment(
            "// comment2",
        ),
    },
]
