crates/lang-parse/tests/snapshots/lexer__lexer_percent unit.snap
---
source: crates/lang-parse/tests/lexer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    Spanned {
        span: 0..1,
        value: LiteralInt(
            "1",
        ),
    },
    Spanned {
        span: 1..2,
        value: Unit(
            "%",
        ),
    },
]
